--- a/demo/README
+++ b/demo/README
@@ -1,16 +1,13 @@
-
 ;; copyright (c) 1985, 1986 Franz Inc, Alameda, CA  All rights reserved.
 ;; copyright (c) 1986-1991 Franz Inc, Berkeley, CA  All rights reserved.
+;; $Id: README,v 1.3.6.1 1998/02/12 00:53:52 layer Exp $
 
-;; $Header: /repo/cvs.copy/clim2/demo/README,v 1.3 1997/02/05 01:46:58 tomj Exp $
-
-To run the CLIM demos.
+Running the CLIM demos:
 
 1. Load the demos with:
 
-	(require :clim-demoxm) 
+	(require :climdemo)
 
 2. To start, evaluate:
 	
 	 (clim-demo:start-demo)
-
